# muGPT

./: .gitignore  inference.py  pyproject.toml  test.yaml  train.py
mugpt/data/: datasets.py
mugpt/logger/: __init__.py  base.py  wandblogger.py
mugpt/loss/: __init__.py  losses.py
mugpt/models/: transformer.py
mugpt/tokenization/: __init__.py  tokenizer.py
mugpt/training/: __init__.py  trainer.py
scripts/: preprocess_hf.py
tests/: conftest.py  test_dataset.py  test_loss.py  test_trainer.py  test_transformer.py
